--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,7 @@
         <maven.compiler.target>11</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <slf4jVersion>1.6.1</slf4jVersion>
+<!--  NIE WYWALAC TEGO NA RAZIE!      <checkstyle.config.location>checkstyle.xml</checkstyle.config.location>-->
     </properties>
 
     <dependencies>
@@ -42,7 +43,12 @@
         <dependency>
             <groupId>org.slf4j</groupId>
             <artifactId>slf4j-api</artifactId>
-            <version>1.7.21</version>
+            <version>2.0.7</version>
+        </dependency>
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-log4j12</artifactId>
+            <version>2.0.7</version>
         </dependency>
 
         <dependency>
@@ -103,7 +109,11 @@
                     </archive>
                 </configuration>
             </plugin>
-
+<!--     TEGO TEŻ NIE        <plugin>-->
+<!--                <groupId>org.apache.maven.plugins</groupId>-->
+<!--                <artifactId>maven-checkstyle-plugin</artifactId>-->
+<!--                <version>2.9.1</version>-->
+<!--            </plugin>-->
         </plugins>
     </build>
 
